--- a/forum/vercel.json
+++ b/forum/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/cleanup-notifications",
       "schedule": "0 10 * * *"
+    },
+    {
+      "path": "/api/cron/poll-debates",
+      "schedule": "*/30 * * * *"
     }
   ]
 }
