--- a/forum/parliament-pipeline/.env.example
+++ b/forum/parliament-pipeline/.env.example
@@ -1,4 +1,4 @@
-# Supabase
+# Supabase (required). On Railway use these names, or NEXT_PUBLIC_SUPABASE_URL / SUPABASE_SERVICE_ROLE_KEY (same values as forum).
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_KEY=eyJ...
 
