--- a/forum/package.json
+++ b/forum/package.json
@@ -42,6 +42,7 @@
     "@statsig/session-replay": "^3.25.5",
     "@statsig/web-analytics": "^3.25.5",
     "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.95.3",
     "@types/canvas-confetti": "^1.9.0",
     "@types/hls.js": "^0.13.3",
     "@vercel/analytics": "^1.5.0",
@@ -64,10 +65,10 @@
     "react": "19.2.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "19.2.0",
-    "react-markdown": "^10.1.0",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
     "remark-breaks": "^4.0.0",
