--- a/forum/package.json
+++ b/forum/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "create-parliament-bot": "npx tsx scripts/create-parliament-bot.ts"
   },
   "dependencies": {
@@ -52,6 +54,7 @@
     "color": "^5.0.2",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.16.0",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.24",
     "hls.js": "^1.6.9",
@@ -64,10 +67,10 @@
     "react": "19.2.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "19.2.0",
-    "react-markdown": "^10.1.0",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
     "remark-breaks": "^4.0.0",
@@ -82,7 +85,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.19",
-    "@types/node": "^20",
+    "@types/node": "^20.19.33",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9",
@@ -90,7 +93,8 @@
     "supabase": "^2.30.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   },
   "overrides": {
     "@types/react": "19.2.2",
