--- a/forum/package.json
+++ b/forum/package.json
@@ -58,6 +58,7 @@
     "ethers": "^6.16.0",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.24",
+    "geist": "^1.7.0",
     "hls.js": "^1.6.9",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
