--- a/forum/blockchain/package.json
+++ b/forum/blockchain/package.json
@@ -25,7 +25,8 @@
     "solidity-coverage": "^0.8.0",
     "ts-node": "^10.9.0",
     "typechain": "^8.3.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "dotenv": "^16.0.0"
   },
   "dependencies": {
     "lodash": "^4.17.23"
