--- a/forum/package.json
+++ b/forum/package.json
@@ -54,6 +54,7 @@
     "cmdk": "^1.1.1",
     "color": "^5.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.16.0",
     "face-api.js": "^0.22.2",
